# Medienrechtspraxis

./: .env.example  .gitignore  Dockerfile.mcp  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-site.yml  ci.yml  daily-update.yml  deploy-mcp.yml
agents/: __init__.py  __main__.py  anthropic_client.py  evaluator.py  generation.py  mcp_client.py  pipeline.py  translator.py
agents/tools/: __init__.py  legislation.py  opencaselaw.py
content/bildnisschutz/: meta.yaml
content/datenschutz-medien/: meta.yaml
content/ehrverletzung/: meta.yaml
content/gegendarstellung/: meta.yaml
content/lauterkeitsrecht-medien/: meta.yaml
content/online-medien/: meta.yaml
content/persoenlichkeitsschutz/: meta.yaml
content/pressefreiheit/: meta.yaml
content/quellenschutz/: meta.yaml
content/rundfunkrecht/: meta.yaml
content/urheberrecht-medien/: meta.yaml
content/werbung-sponsoring/: meta.yaml
docs/specs/: 2026-03-26-medienrechtspraxis-design.md
guidelines/: bildnisschutz.md  datenschutz-medien.md  ehrverletzung.md  evaluate.md  gegendarstellung.md  global.md  lauterkeitsrecht-medien.md  online-medien.md  persoenlichkeitsschutz.md  pressefreiheit.md  quellenschutz.md  rundfunkrecht.md  urheberrecht-medien.md  werbung-sponsoring.md
mcp-server/: esbuild.config.ts  package.json  tsconfig.json  wrangler.toml
mcp-server/src/: server.ts
mcp-server/src/lib/: content_loader.ts
scripts/: bootstrap.sh  generate_meta.py  validate_content.py
site/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
(+17 files in other folders)
